--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/image-utils": "^0.3.23",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "expo": "^49.0.3",
-    "expo-status-bar": "~1.4.4",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
